--- a/assets/stylesheets/abacus.css
+++ b/assets/stylesheets/abacus.css
@@ -20,7 +20,7 @@ tr {
   border: 1px solid tan;
   display: inline-block;
   margin: 0 64px; 
-  height: 449px;
+  height: 390px;
   margin-bottom: -3px;
   width: 17px;
   padding-top: 60px;
@@ -41,18 +41,19 @@ box-shadow: inset 10px 10px 8px -5px rgba(252,171,171,0.6), inset -10px -10px 8p
 }
 
 td.separator {
-  width: 120px;
+  width: 185px;
   height: 17px;
   background-color: wheat;
   border-radius:0;
   box-shadow: none;
-  margin-top: 60px;
+  
   margin-bottom: 60px;
+  margin-left: -93px;
 }
 
 td.upper {
   position: relative;
-  top: -120px;
+  top: -60px;
 }
 
 #sum {
