--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=PT+Sans);
+/* @import url(https://fonts.googleapis.com/css?family=PT+Sans); */
 
 main {
     position: relative;
@@ -65,18 +65,47 @@ main {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     padding: 8px 0;        
-    -webkit-animation: brushstroke 1.6s ease-in-out alternate;
-    -moz-animation: brushstroke 1.6s ease-in-out alternatee;
-    animation: brushstroke 1.6s ease-in-out alternate;
-    /* -webkit-animation: bigcircle 1.6s ease-in-out alternate;
-  -moz-animation: bigcircle 1.6s ease-in-out alternatee;
-  animation: bigcircle 1.6s ease-in-out alternate; */
+    /* -webkit-animation: brushstroke 1.6s ease-in-out alternate;
+    -moz-animation: brushstroke 1.6s ease-in-out alternate;
+    animation: brushstroke 1.6s ease-in-out alternate; */
+    -webkit-animation: blurFadeIn 3s ease-in 1s backwards;
+    -moz-animation: blurFadeIn 3s ease-in 1s backwards;
+    animation: blurFadeIn 3s ease-in 1s backwards;
 }
 
 @keyframes brushstroke {
   0%   {background-size: 0 0;}  
   50%  {background-size: 0 0;}  
   100% {background-size: 100% 100%;}
+}
+
+@keyframes blurFadeIn {
+  from {
+    opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		-webkit-transform: scale(1.3);
+  }
+  to {
+    opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		-webkit-transform: scale(1);
+  }
+
+	/* 0%{
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		-webkit-transform: scale(1.3);
+	}
+	50%{
+		opacity: 0.5;
+		text-shadow: 0px 0px 10px #fff;
+		-webkit-transform: scale(1.1);
+	}
+	100%{
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		-webkit-transform: scale(1);
+	} */
 }
 
 .big-circles {
