--- a/assets/stylesheets/abacus.css
+++ b/assets/stylesheets/abacus.css
@@ -138,11 +138,11 @@
     position:relative;    
 }
 
-.tooltip .left {
+.tooltip .top {
     min-width:200px; 
-    top:0;
-    right:5%;
-    margin-right:20px;   
+    top:60px;
+    right:-10%;
+    transform:translate(-50%, -100%);
     padding:10px 20px;
     color:#444444;
     background-color:#EEEEEE;
@@ -153,31 +153,30 @@
     z-index:99999999;
     box-sizing:border-box;
     box-shadow:0 1px 8px rgba(0,0,0,0.5);
-    visibility:hidden; opacity:0; transition:opacity 0.8s;
+    display:none;
 }
 
-.tooltip:hover .left {
-    visibility:visible; opacity:1;
+.tooltip:hover .top {
+    display:block;
 }
 
-.tooltip .left i {
+.tooltip .top i {
     position:absolute;
-    top:50%;
-    left:100%;
-    margin-top:-12px;
-    width:12px;
-    height:24px;
+    top:100%;
+    right:7%;
+    margin-left:-12px;
+    width:24px;
+    height:12px;
     overflow:hidden;
 }
 
-.tooltip .left i::after {
+.tooltip .top i::after {
     content:'';
     position:absolute;
     width:12px;
     height:12px;
-    left:0;
-    top:50%;
-    transform:translate(-50%,-50%) rotate(-45deg);
+    right:7%;
+    transform:translate(-50%,-50%) rotate(45deg);
     background-color:#EEEEEE;
     box-shadow:0 1px 8px rgba(0,0,0,0.5);
 }
