--- a/assets/stylesheets/abacus.css
+++ b/assets/stylesheets/abacus.css
@@ -210,16 +210,6 @@
 
 /* Tutorial animation */
 
-#frame-row {
-  position: relative;
-  width: 1175px;
-  margin: 0 auto;
-  height: 275px;
-  border: 3px solid black;
-  border-radius: 20px;
-  top: 215px;
-}
-
 .menu-item {
   float:left;
 }
@@ -231,5 +221,12 @@
 
 #prev-step {
   display: none;
+}
+
+#canvas {
+  /* border: 1px solid #c3c3c3; */
+  position: absolute;
+  z-index: 3;
+  top: 220px;
 }
 
